# Writing-Illustration-printing-qc

./: .gitignore  CERTIFICATION.md  README.md  REPO_MAP.md  demo.py  pyproject.toml  requirements.txt  setup.py
bookforge/: __init__.py  __main__.py  cli.py  knowledge_loader.py  pipeline.py  profiles.py  schemas.py  scoring_registry.py  utils.py
docs/: ARCHITECTURE_REVIEW.md  ARCHITECTURE_SIMPLIFICATION_AUDIT.md  BOOK_QUALITY_REPORT.md  BOOK_SEQUENCE_REVIEW.md  BOUNDED_RESELECTION.md  CHARACTER_COMMERCIAL_SCORING.md  CINEMATIC_CAMERA_SYSTEM.md  COLOR_SCRIPT_ENGINE.md  CONSOLIDATION_PLAN.md  DUAL_AUDIENCE_LAYERING.md  DYNAMIC_TYPOGRAPHY.md  END_TO_END_FLUX_LOCAL.md  FINAL_ARCHITECTURE_STATE.md  FLUX_LOCAL_SERVICE.md  HIDDEN_WORLD_REREADABILITY.md  LOCAL_GPU_RUNTIME.md  MONTE_CARLO_LAYOUT.md  PAGE_ARCHITECTURE_SEQUENCER.md  PAGE_TURN_TENSION.md  PREMIUM_VISUAL_QC.md  SALIENCY_FLOW.md  SCORING_WEIGHT_REFERENCE.md  SEQUENCE_OPTIMIZATION.md  STOREFRONT_OPTIMIZATION.md  TARGETED_REGENERATION.md  UI.md  scoring_registry.md
examples/: demo.sh  grumblebeast_storyweaver.md  sample_story.md
profiles/: ultimate_imprint_8p5x8p5_image_heavy.json
scripts/: run_imprint_85_imageheavy.py  smoke_run.py  ui.sh
test-output/: report_20260212_192818.json  report_20260212_192818.txt
tests/: test_book_quality_report.py  test_book_sequence_review.py  test_bounded_reselection.py  test_camera_language_packet11.py  test_certification_artifacts.py  test_character_commercial_packet16.py  test_color_postprocess.py  test_color_scoring_engine.py  test_color_script_engine.py  test_ui_utils.py  (+31 more)
(+161 files in other folders)
